--- a/422-raster-tunnel-mikroskopie/latex/Makefile
+++ b/422-raster-tunnel-mikroskopie/latex/Makefile
@@ -1,7 +1,7 @@
 all:
-	pdflatex main.tex -interaction=nonstopmode
-	biber main
-	pdflatex main.tex -interaction=nonstopmode
+	pdflatex main.tex -interaction=nonstopmode > /dev/null
+	biber main > /dev/null
+	pdflatex main.tex -interaction=nonstopmode | tail
 
 clean:
 	rm *.log
